--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             {% if messages %}
             {% for category, message in messages %}
             <p class="message {{ category }}">
-                {{ message }}
+                <i><b>{{ category }}: </b></i>{{ message }}
             </p>
             {% endfor %}
             {% endif %}
