--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <label>Peer name:</label>
 
                     <div class="input-box">
-                        <input name="peer_name" placeholder="eg. luuk" pattern="[a-z0-9\-]"/>
+                        <input name="peer_name" placeholder="eg. luuk" pattern="[A-Za-z0-9\-]"/>
                         <button class="button">add peer</button>
                     </div>
                 </form>
