fix input filter yet again

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <label>Peer name:</label>
 
                     <div class="input-box">
-                        <input name="peer_name" placeholder="eg. luuk" pattern="[A-Za-z0-9\-]" title="The only allowed characters are letters (upper- and lowercase), numbers, dashes (-)"/>
+                        <input name="peer_name" placeholder="eg. luuk" pattern="[a-zA-Z0-9\-]+" title="Only letters, numbers, and dashes are allowed"/>
                         <button class="button">add peer</button>
                     </div>
                 </form>
