--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
 
                     <div class="qr-container">
                         <div class="qr-item">
-                            <span>LAN traffic only config</span>
+                            <span>LAN-traffic-only config</span>
                             <img src="data:image/png;charset=utf-8;base64,{{ peer.lan_qr }}"/>
                             <a class="button download" href="{{ url_for("get_config", config_type = "lan", peer_name = peer.name) }}" download>download .conf</a>
                         </div>
